# skim

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  TestSkim.py  main.py  model.py  model_element.py  pyproject.toml  pytest.ini  quark.py  sonar-project.properties
skim/: cli.py  endpoint.py  exceptions.py  main.py  model.py  n_grams_model.py  raw_file.py  sentence_prediction.py  tokeniser.py  tokenizer.py  types.py  word_to_number_map.py  write_tokens.py
test/: fake_zmq.py  test_cli.py  test_endpoint.py  test_ngrams_model.py  test_raw_file.py  test_skim.py  test_tokenizer.py  test_word_to_number_map.py  test_write_tokens.py
test/integration/: sample_input_file.txt  test_sentence_prediction.py
test/tokeniser/: conftest.py  test_grouping.py  test_token_generation.py
test/unit/: test_endpoint.py  test_ngrams_model.py  test_word_to_number_map.py
